fixing picture not showing up issue

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div class="box">
-            <img src="me.jpg" alt="Photo of me" class="box-img">
+            <img src="me.JPG" alt="Photo of me" class="box-img">
             <h1>Samantha Daugherty</h1>
             <p>Site in progress.</p>
             <p>:)</p>
